Add gravatar as a author logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
           </div>
           <div class="col-sm-2">
             <a href="#" class="pull-right">
-              <img src="http://placehold.it/50" class="img-circle">
+              <img src="http://www.gravatar.com/avatar/{{ gravatar }}?d=retro&s=50" class="img-circle">
             </a>
           </div>
         </div>
