Add IFrame generator, rss generator

--- a/github.html
+++ b/github.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+type: standard
 tags: github
+caption: 'GitHub Activities'
 ---
-{% include github-activities.html %}
+{% include posts.html %}
