--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   </ul>
   <ul class="nav hidden-xs" id="sidebar-footer">
     <li class="social">
+      <a href="/feed.xml"><i class="fa fa-rss"></i></a>
+      <a href="/feed.opml"><i class="fa fa-dot-circle-o"></i></a>
       <a href="http://www.twitter.com/TimVideosUs"><i class="fa fa-twitter"></i></a>
     </li>
     <li>
