--- a/stats.html
+++ b/stats.html
@@ -23,8 +23,9 @@ projects:
         'charts': {
           'pieChart': {{ project[1].pie_chart }},
           'codeFrequency': {{ project[1].code_frequency }},
-          'commitActivity': {{ project[1].commit_activity }}
-
+          'commitActivity': {{ project[1].commit_activity }},
+          'commitsPerHour': {{ project[1].commits_per_hour }},
+          'commitsPerWeekday': {{ project[1].commits_per_weekday }},
         }
       },
     {% endfor %}
