Add basic issues filter

--- a/issues.html
+++ b/issues.html
@@ -18,7 +18,7 @@ issues:
   };
 </script>
 
-<script src="{{ "/js/typeahead.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/plugins/typeahead.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/issues.js" | prepend: site.baseurl }}"></script>
 
 {% include issues.html %}
