--- a/stats.html
+++ b/stats.html
@@ -32,5 +32,5 @@ projects:
   };
 </script>
 
-<script src="{{ "/js/highcharts.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/plugins/highcharts.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/github-charts.js" | prepend: site.baseurl }}"></script>
