Converted https://github.com/timvideos/planet/commit/fa7c297d8f1f8aee57bc09eb7028c36837f677a0

--- a/iframe/issues/index.html
+++ b/iframe/issues/index.html
@@ -3110,7 +3110,7 @@ If you have other problems like the sound being quiet or the display being wrong
                 <div class="issue-content issue-body">
                   <h4>Issue body</h4>
                   <div>
-                    <p>Xilinx’s tools are really spammy, xob has a version of colormake which works with them. This uses that tool (with a small addition to prevent colorizing when being piped).</p>
+                    <p>Xilinx’s tools are really spammy, xobs has a version of colormake which works with them. This uses that tool (with a small addition to prevent colorizing when being piped).</p>
 
 <p><img src="https://cloud.githubusercontent.com/assets/21212/3698793/50402e6a-13c9-11e4-880f-146fbdbc1599.png" alt="screenshot from 2014-07-25 16 29 59" /></p>
 
