Add GitHub charts loader

--- a/stats.html
+++ b/stats.html
@@ -3,6 +3,7 @@ layout: default
 type: standard
 tags: stats
 caption: GitHub Statistics
+loader: true
 projects:
   - timvideos/streaming-system
   - timvideos/gst-switch
