Converted https://github.com/timvideos/planet/commit/c7a10353dc938d698bddd0d84dbb20d1900522cc

--- a/iframe/issues/index.html
+++ b/iframe/issues/index.html
@@ -3240,6 +3240,9 @@ FPD-Link. DisplayPort is backward compatible with VGA and DVI through the use of
 adapter dongles.<br />
 ```</p>
 
+<p>Further information developed for the  VALS Semester of Code can be found in the following Google Doc;<br />
+https://docs.google.com/document/d/1xSo71wu_t8SUuUZehakvqTL_png5YN-bOwD47PRXGIM/pub</p>
+
 <p><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/DisplayPort_Connector.svg/570px-DisplayPort_Connector.svg.png" alt="DisplayPort Connector" /></p>
 
                   </div>
@@ -3282,7 +3285,7 @@ adapter dongles.<br />
                     
                   </div>
                 </div>
-                <button type="button" data-toggle="tooltip" data-original-title="read in about 30 seconds" class="show-more btn btn-default btn-xs pull-right" >Read more...</button>
+                <button type="button" data-toggle="tooltip" data-original-title="read in about 35 seconds" class="show-more btn btn-default btn-xs pull-right" >Read more...</button>
                 <button type="button" class="hide-more btn btn-default btn-xs pull-right" >Hide issue...</button>
               </div>
               <small class="description">
